--- a/hw-02/Balesky_HW-02_PandasAndObjects-STUDENT_v1.ipynb
+++ b/hw-02/Balesky_HW-02_PandasAndObjects-STUDENT_v1.ipynb
@@ -125,13 +125,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f508397a",
+   "cell_type": "markdown",
+   "id": "f3b4dffa",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Write code here"
+    "curl -O https://raw.githubusercontent.com/msu-cmse-courses/cmse202-S23-data/main/HW/HW2/zoo.csv\n",
+    "    \n",
+    "curl -O https://raw.githubusercontent.com/msu-cmse-courses/cmse202-S23-data/main/HW/HW2/class.csv"
    ]
   },
   {
@@ -145,13 +145,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d5311cf",
+   "cell_type": "markdown",
+   "id": "ff992998",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Write your commands here"
+    "vim zoo.csv\n",
+    "\n",
+    "vim class.csv"
    ]
   },
   {
@@ -169,7 +169,9 @@
    "id": "50c00d9d",
    "metadata": {},
    "source": [
-    "<font size=6 color=\"#009600\">&#9998;</font> Write your description here."
+    "<font size=6 color=\"#009600\">&#9998;</font> Class.csv assigns each class a number 1-7, gives the number of species, the class type \"mammal\", \"bird\", \"reptile\", etc. and names of the animals\n",
+    "\n",
+    "Zoo.csv contains animal information such as animal_name, boolean values for hair, feathers, eggs, milk, airborne, aquatic, predator, toothed, backbone, breathes, venomous, fins, legs, tail, domestic, catsize, and class_type (which is from the class.csv file)"
    ]
   },
   {
@@ -184,12 +186,462 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b3117200-8b2c-4174-9189-06f9c29cea68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>animal_name</th>\n",
+       "      <th>hair</th>\n",
+       "      <th>feathers</th>\n",
+       "      <th>eggs</th>\n",
+       "      <th>milk</th>\n",
+       "      <th>airborne</th>\n",
+       "      <th>aquatic</th>\n",
+       "      <th>predator</th>\n",
+       "      <th>toothed</th>\n",
+       "      <th>backbone</th>\n",
+       "      <th>breathes</th>\n",
+       "      <th>venomous</th>\n",
+       "      <th>fins</th>\n",
+       "      <th>legs</th>\n",
+       "      <th>tail</th>\n",
+       "      <th>domestic</th>\n",
+       "      <th>catsize</th>\n",
+       "      <th>class_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>aardvark</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>antelope</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>bass</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>bear</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>boar</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>wallaby</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>wasp</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>wolf</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>worm</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>wren</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>101 rows × 18 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    animal_name  hair  feathers  eggs  milk  airborne  aquatic  predator  \\\n",
+       "0      aardvark     1         0     0     1         0        0         1   \n",
+       "1      antelope     1         0     0     1         0        0         0   \n",
+       "2          bass     0         0     1     0         0        1         1   \n",
+       "3          bear     1         0     0     1         0        0         1   \n",
+       "4          boar     1         0     0     1         0        0         1   \n",
+       "..          ...   ...       ...   ...   ...       ...      ...       ...   \n",
+       "96      wallaby     1         0     0     1         0        0         0   \n",
+       "97         wasp     1         0     1     0         1        0         0   \n",
+       "98         wolf     1         0     0     1         0        0         1   \n",
+       "99         worm     0         0     1     0         0        0         0   \n",
+       "100        wren     0         1     1     0         1        0         0   \n",
+       "\n",
+       "     toothed  backbone  breathes  venomous  fins  legs  tail  domestic  \\\n",
+       "0          1         1         1         0     0     4     0         0   \n",
+       "1          1         1         1         0     0     4     1         0   \n",
+       "2          1         1         0         0     1     0     1         0   \n",
+       "3          1         1         1         0     0     4     0         0   \n",
+       "4          1         1         1         0     0     4     1         0   \n",
+       "..       ...       ...       ...       ...   ...   ...   ...       ...   \n",
+       "96         1         1         1         0     0     2     1         0   \n",
+       "97         0         0         1         1     0     6     0         0   \n",
+       "98         1         1         1         0     0     4     1         0   \n",
+       "99         0         0         1         0     0     0     0         0   \n",
+       "100        0         1         1         0     0     2     1         0   \n",
+       "\n",
+       "     catsize  class_type  \n",
+       "0          1           1  \n",
+       "1          1           1  \n",
+       "2          0           4  \n",
+       "3          1           1  \n",
+       "4          1           1  \n",
+       "..       ...         ...  \n",
+       "96         1           1  \n",
+       "97         0           6  \n",
+       "98         1           1  \n",
+       "99         0           7  \n",
+       "100        0           2  \n",
+       "\n",
+       "[101 rows x 18 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Write code here"
+    "#Write code here\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "zoo = pd.read_csv(\"zoo.csv\")\n",
+    "\n",
+    "zoo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f89abbc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Class_Number</th>\n",
+       "      <th>Number_Of_Animal_Species_In_Class</th>\n",
+       "      <th>Class_Type</th>\n",
+       "      <th>Animal_Names</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>41</td>\n",
+       "      <td>Mammal</td>\n",
+       "      <td>aardvark, antelope, bear, boar, buffalo, calf,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Bird</td>\n",
+       "      <td>chicken, crow, dove, duck, flamingo, gull, haw...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Reptile</td>\n",
+       "      <td>pitviper, seasnake, slowworm, tortoise, tuatara</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Fish</td>\n",
+       "      <td>bass, carp, catfish, chub, dogfish, haddock, h...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Amphibian</td>\n",
+       "      <td>frog, frog, newt, toad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>flea, gnat, honeybee, housefly, ladybird, moth...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Invertebrate</td>\n",
+       "      <td>clam, crab, crayfish, lobster, octopus, scorpi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Class_Number  Number_Of_Animal_Species_In_Class    Class_Type  \\\n",
+       "0             1                                 41        Mammal   \n",
+       "1             2                                 20          Bird   \n",
+       "2             3                                  5       Reptile   \n",
+       "3             4                                 13          Fish   \n",
+       "4             5                                  4     Amphibian   \n",
+       "5             6                                  8           Bug   \n",
+       "6             7                                 10  Invertebrate   \n",
+       "\n",
+       "                                        Animal_Names  \n",
+       "0  aardvark, antelope, bear, boar, buffalo, calf,...  \n",
+       "1  chicken, crow, dove, duck, flamingo, gull, haw...  \n",
+       "2    pitviper, seasnake, slowworm, tortoise, tuatara  \n",
+       "3  bass, carp, catfish, chub, dogfish, haddock, h...  \n",
+       "4                             frog, frog, newt, toad  \n",
+       "5  flea, gnat, honeybee, housefly, ladybird, moth...  \n",
+       "6  clam, crab, crayfish, lobster, octopus, scorpi...  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "animal_class = pd.read_csv(\"class.csv\")\n",
+    "\n",
+    "animal_class"
    ]
   },
   {
@@ -207,7 +659,8 @@
    "id": "7589ad90-4098-4e6f-9b74-bd8ac46c9031",
    "metadata": {},
    "source": [
-    "<font size=6 color=\"#009600\">&#9998;</font> *Write your answer here*"
+    "<font size=6 color=\"#009600\">&#9998;</font> *Write your answer here*\n",
+    "\n"
    ]
   },
   {
