--- a/hw-02/Balesky_HW-02_PandasAndObjects-STUDENT_v1.ipynb
+++ b/hw-02/Balesky_HW-02_PandasAndObjects-STUDENT_v1.ipynb
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "bd11737f",
    "metadata": {},
    "outputs": [],
@@ -1028,15 +1028,16 @@
     "    This is an Animal class, used to store information about animals in the Zoo.\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, kind, required_area=0):\n",
+    "    def __init__(self, kind, habitat, required_area=0):\n",
     "        \"\"\" Initialize the Animal object.\n",
     "        Inputs are\n",
     "        kind: the type of animal (string)\n",
     "        required_area: square meters (int)\n",
     "        \"\"\"\n",
     "        self.kind = kind\n",
+    "        self.habitat = habitat\n",
     "        self.required_area = required_area\n",
-    "\n",
+    "        \n",
     "\n",
     "    def set_required_area(self, area):\n",
     "        \"\"\" Set area required for a single animal. \"\"\"\n",
@@ -1052,7 +1053,12 @@
     "\n",
     "    def get_required_area(self):\n",
     "        \"\"\" Return area required for a single animal. \"\"\"\n",
-    "        return self.required_area"
+    "        return self.required_area\n",
+    "        \n",
+    "    def get_habitat(self):\n",
+    "        \"\"\" Return the habitat of the animal.\"\"\"\n",
+    "        return self.habitat\n",
+    "    "
    ]
   },
   {
@@ -1069,26 +1075,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "id": "618896a0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.Animal at 0x7f5ca7784400>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Write your code here\n",
     "\n",
-    "Cassandra = Animal(\"Cassandra\", \"lion\")\n",
-    "Cassandra"
+    "Alex = Animal(\"Lion\", \"grassland\")\n",
+    "Alex.get_habitat()\n",
+    "\n",
+    "Marty = Animal(\"Zebra\", \"grassland\")\n",
+    "Skipper = Animal(\"Penguin\", \"aquatic\")\n"
    ]
   },
   {
@@ -1106,28 +1104,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "id": "8f097f6a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'habitat' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-98895003c119>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Write out your new Animal class here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mAnimal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhabitat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhabitat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-10-98895003c119>\u001b[0m in \u001b[0;36mAnimal\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mAnimal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhabitat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhabitat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'habitat' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Write out your new Animal class here\n",
     "\n",
     "class Animal(object):\n",
-    "    self.habitat = habitat\n"
+    "    \"\"\"\n",
+    "    This is an Animal class, used to store information about animals in the Zoo.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, kind, habitat, required_area=0):\n",
+    "        \"\"\" Initialize the Animal object.\n",
+    "        Inputs are\n",
+    "        kind: the type of animal (string)\n",
+    "        required_area: square meters (int)\n",
+    "        \"\"\"\n",
+    "        self.kind = kind\n",
+    "        self.habitat = habitat\n",
+    "        self.required_area = required_area\n",
+    "        \n",
+    "\n",
+    "    def set_required_area(self, area):\n",
+    "        \"\"\" Set area required for a single animal. \"\"\"\n",
+    "        self.required_area = area\n",
+    "\n",
+    "    def set_kind(self, kind):\n",
+    "        \"\"\" Set the kind of the animal \"\"\"\n",
+    "        self.kind = kind\n",
+    "\n",
+    "    def get_kind(self):\n",
+    "        \"\"\" Return animal's kind. \"\"\"\n",
+    "        return self.kind\n",
+    "\n",
+    "    def get_required_area(self):\n",
+    "        \"\"\" Return area required for a single animal. \"\"\"\n",
+    "        return self.required_area\n",
+    "        \n",
+    "    def get_habitat(self):\n",
+    "        \"\"\" Return the habitat of the animal.\"\"\"\n",
+    "        return self.habitat"
    ]
   },
   {
@@ -1150,12 +1168,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "21a47a7f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Write out your new Animal class here"
+    "#Write out your new Animal class here\n",
+    "\n",
+    "class Animal(object):\n",
+    "    \"\"\"\n",
+    "    This is an Animal class, used to store information about animals in the Zoo.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, kind, habitat, required_area=0):\n",
+    "        \"\"\" Initialize the Animal object.\n",
+    "        Inputs are\n",
+    "        kind: the type of animal (string)\n",
+    "        required_area: square meters (int)\n",
+    "        \"\"\"\n",
+    "        self.kind = kind\n",
+    "        self.habitat = habitat\n",
+    "        \n",
+    "        if self.habitat == \"aquatic\":\n",
+    "            self.required_area = 10\n",
+    "            \n",
+    "        elif self.habitat == \"aviary\":\n",
+    "            self.required_area = 20\n",
+    "            \n",
+    "        elif self.habitat == \"grassland\":\n",
+    "            self.required_area = 30\n",
+    "        \n",
+    "\n",
+    "    def set_required_area(self, area):\n",
+    "        \"\"\" Set area required for a single animal. \"\"\"\n",
+    "        self.required_area = area\n",
+    "\n",
+    "    def set_kind(self, kind):\n",
+    "        \"\"\" Set the kind of the animal \"\"\"\n",
+    "        self.kind = kind\n",
+    "\n",
+    "    def get_kind(self):\n",
+    "        \"\"\" Return animal's kind. \"\"\"\n",
+    "        return self.kind\n",
+    "\n",
+    "    def get_required_area(self):\n",
+    "        \"\"\" Return area required for a single animal. \"\"\"\n",
+    "        return self.required_area\n",
+    "        \n",
+    "    def get_habitat(self):\n",
+    "        \"\"\" Return the habitat of the animal.\"\"\"\n",
+    "        return self.habitat"
    ]
   },
   {
@@ -1170,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "a2fd9251-92e6-4746-9d3f-0f4573e5ee72",
    "metadata": {},
    "outputs": [],
@@ -1189,6 +1251,7 @@
     "        \"\"\"\n",
     "        self.name = name\n",
     "        self.animals = {}\n",
+    "        \n",
     "\n",
     "    def add_animal(self, animal):\n",
     "        \"\"\" Adds an animal to the zoo. \"\"\"\n",
@@ -1256,12 +1319,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "43484736",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Write your code for constructing an example zoo here"
+    "#Write your code for constructing an example zoo here\n",
+    "\n",
+    "Detroit_zoo = Zoo(\"Detroit Zoo\")\n",
+    "Detroit_zoo.add(Alex)\n",
+    "Detroit_zoo.add(Marty)\n",
+    "Detroit_zoo.add(Skipper)\n",
+    "\n",
+    "Detroit_zoo.total_area()"
    ]
   },
   {
