--- a/hw-02/Balesky_HW-02_PandasAndObjects-STUDENT_v1.ipynb
+++ b/hw-02/Balesky_HW-02_PandasAndObjects-STUDENT_v1.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "b3117200-8b2c-4174-9189-06f9c29cea68",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
        "[101 rows x 18 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "87a4d3b8",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
        "6  clam, crab, crayfish, lobster, octopus, scorpi...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "c6adaac9",
    "metadata": {},
    "outputs": [
@@ -897,7 +897,7 @@
        "7                 10       10  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "2fa7eb2a",
    "metadata": {},
    "outputs": [
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "bd11737f",
    "metadata": {},
    "outputs": [],
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "id": "618896a0",
    "metadata": {},
    "outputs": [],
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "id": "8f097f6a",
    "metadata": {},
    "outputs": [],
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "id": "21a47a7f",
    "metadata": {},
    "outputs": [],
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 47,
    "id": "a2fd9251-92e6-4746-9d3f-0f4573e5ee72",
    "metadata": {},
    "outputs": [],
@@ -1251,6 +1251,7 @@
     "        \"\"\"\n",
     "        self.name = name\n",
     "        self.animals = {}\n",
+    "        self.habitat_required_area = {}\n",
     "        \n",
     "\n",
     "    def add_animal(self, animal):\n",
@@ -1319,17 +1320,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 53,
    "id": "43484736",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "70"
+       "{'Lion': <__main__.Animal at 0x7fdf860aae80>,\n",
+       " 'Zebra': <__main__.Animal at 0x7fdf860aaf10>,\n",
+       " 'Penguin': <__main__.Animal at 0x7fdf860aaee0>}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1345,7 @@
     "Detroit_zoo.add(Marty)\n",
     "Detroit_zoo.add(Skipper)\n",
     "\n",
-    "Detroit_zoo.total_area()"
+    "Detroit_zoo.get_animals()"
    ]
   },
   {
@@ -1368,12 +1371,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "05391492",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Write out your new Zoo class here"
+    "#Write out your new Zoo class here\n",
+    "\n",
+    "class Zoo:\n",
+    "    \"\"\"\n",
+    "        Class for Zoo object.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, name):\n",
+    "        \"\"\" Initialize the Animal object.\n",
+    "        Inputs are\n",
+    "        name: name of the zoo (string)\n",
+    "        animals: collection (dictionary) of animal objects\n",
+    "        \"\"\"\n",
+    "        self.name = name\n",
+    "        self.animals = {}\n",
+    "        self.habitat_required_area = {}\n",
+    "        \n",
+    "\n",
+    "    def add_animal(self, animal):\n",
+    "        \"\"\" Adds an animal to the zoo. \"\"\"\n",
+    "        # we use animal's name as a key in the dictionary\n",
+    "        kind = animal.get_kind()\n",
+    "        self.animals[kind] = animal\n",
+    "\n",
+    "    def add(self, animal):\n",
+    "        \"\"\" Shorter name of function to add animals to the Zoo. \"\"\"\n",
+    "        self.add_animal(animal)\n",
+    "\n",
+    "    def get_animals(self):\n",
+    "        \"\"\" Return all animals in the zoo.\"\"\"\n",
+    "        return self.animals\n",
+    "\n",
+    "    def remove(self, name):\n",
+    "        \"\"\" Remove animal from the Zoo for given name. If the name does not exist, error is printed. \"\"\"\n",
+    "        if name in self.animals:\n",
+    "            # yes, animal with given name is in the Zoo\n",
+    "            del self.animals[name]\n",
+    "        else:\n",
+    "            print(\"Animal with given name is not in\", self.name, \"Zoo.\")\n",
+    "\n",
+    "    def get_animal_kinds(self, sort=False):\n",
+    "        \"\"\" Return animal kinds in the Zoo. Return sorted kinds if parameters sorted==True\"\"\"\n",
+    "        kinds = []\n",
+    "        \n",
+    "        for key in self.animals.keys():\n",
+    "            # get animal kinds and store them into list\n",
+    "            kinds.append(self.animals[key].get_kind())\n",
+    "\n",
+    "        if sort == True:\n",
+    "            # we have to return sorted kinds; so sort the kinds\n",
+    "            kinds = sorted(kinds)\n",
+    "\n",
+    "        return kinds\n",
+    "\n",
+    "    def number_animals(self):\n",
+    "        \"\"\" Return number of animals in the Zoo.\"\"\"\n",
+    "        return len(self.animals)\n",
+    "\n",
+    "    def total_area(self):\n",
+    "        \"\"\" Return the total Zoo area to host all animals defined in the object. \"\"\"\n",
+    "        area = 0\n",
+    "\n",
+    "        for key in self.animals:\n",
+    "            # get area for all animals in the zoo\n",
+    "            area += self.animals[key].get_required_area()\n",
+    "\n",
+    "        return area\n",
+    "\n",
+    "    def get_required_habitat_areas(self):\n",
+    "        \"\"\"Return the habitat area for each habitat\"\"\"\n",
+    "        \n",
+    "    def get_specific_habitat_area(self):\n",
+    "        self.habitat_required_area['grassland'] = 0\n",
+    "        self.habitat_required_area['aviary'] = 0\n",
+    "        self.habitat_required_area['aquatic'] = 0\n",
+    "        \n",
+    "        for animal in self.animals:\n",
+    "            current_animal = self.animals[animal]\n",
+    "            self.habitat_required_area[current_animal.habitat] += current_animal.required_area\n",
+    "    \n",
+    "    def get_habitat_sizes(self):\n",
+    "        for animal in self.habitat_required_area:\n",
+    "            \n",
+    "            print(animal, \"habitat has a required area of\", str(self.habitat_required_area[animal]), \"Square Meters\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "d4680a31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "grassland habitat has a required area of 60 Square Meters\n",
+      "aviary habitat has a required area of 0 Square Meters\n",
+      "aquatic habitat has a required area of 10 Square Meters\n"
+     ]
+    }
+   ],
+   "source": [
+    "Detroit_zoo.total_area()\n",
+    "Detroit_zoo.get_specific_habitat_area()\n",
+    "Detroit_zoo.get_habitat_sizes()"
    ]
   },
   {
@@ -1388,12 +1495,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "id": "9d3b477f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "grassland habitat has a required area of 90 Square Meters\n",
+      "aviary habitat has a required area of 20 Square Meters\n",
+      "aquatic habitat has a required area of 20 Square Meters\n"
+     ]
+    }
+   ],
    "source": [
-    "#Write your code for testing the Zoo class here"
+    "#Write your code for testing the Zoo class here\n",
+    "\n",
+    "Bobby = Animal(\"Tiger\", \"grassland\")\n",
+    "Soar = Animal(\"Bird\", \"aviary\")\n",
+    "Swim = Animal(\"Fish\", \"aquatic\")\n",
+    "\n",
+    "Detroit_zoo.add_animal(Bobby)\n",
+    "Detroit_zoo.add_animal(Soar)\n",
+    "Detroit_zoo.add_animal(Swim)\n",
+    "\n",
+    "Detroit_zoo.total_area()\n",
+    "Detroit_zoo.get_specific_habitat_area()\n",
+    "Detroit_zoo.get_habitat_sizes()"
    ]
   },
   {
@@ -1432,10 +1561,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "230b55cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'zoo_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-b34abc00d8de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# to limit the output you can write zoo_df.sample(20).iterrows() to give you a sample of 20 animals\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0manimal_row\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzoo_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0manimal_row\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegs\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0manimal_row\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mairborne\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0manimal_row\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maquatic\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0} needs to go to the grassland habitat \"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0manimal_row\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'animal_name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'zoo_df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Extend the following code for all habitat types\n",
     "\n",
