Committing final submission. Turning into D2l

--- a/hw-02/Balesky_HW-02_PandasAndObjects-STUDENT_v1.ipynb
+++ b/hw-02/Balesky_HW-02_PandasAndObjects-STUDENT_v1.ipynb
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "bd11737f",
    "metadata": {},
    "outputs": [],
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "618896a0",
    "metadata": {},
    "outputs": [],
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "id": "8f097f6a",
    "metadata": {},
    "outputs": [],
@@ -1125,6 +1125,15 @@
     "        self.kind = kind\n",
     "        self.habitat = habitat\n",
     "        self.required_area = required_area\n",
+    "        \n",
+    "        if self.habitat == \"aquatic\":\n",
+    "            self.required_area = 10\n",
+    "            \n",
+    "        elif self.habitat == \"aviary\":\n",
+    "            self.required_area = 20\n",
+    "            \n",
+    "        elif self.habitat == \"grassland\":\n",
+    "            self.required_area = 30\n",
     "        \n",
     "\n",
     "    def set_required_area(self, area):\n",
@@ -1168,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 66,
    "id": "21a47a7f",
    "metadata": {},
    "outputs": [],
@@ -1232,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
    "id": "a2fd9251-92e6-4746-9d3f-0f4573e5ee72",
    "metadata": {},
    "outputs": [],
@@ -1320,19 +1329,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 68,
    "id": "43484736",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Lion': <__main__.Animal at 0x7fdf860aae80>,\n",
-       " 'Zebra': <__main__.Animal at 0x7fdf860aaf10>,\n",
-       " 'Penguin': <__main__.Animal at 0x7fdf860aaee0>}"
+       "{'Lion': <__main__.Animal at 0x7fb45f9b4d30>,\n",
+       " 'Zebra': <__main__.Animal at 0x7fb45f9b4df0>,\n",
+       " 'Penguin': <__main__.Animal at 0x7fb45f9b4c40>}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,9 +1350,9 @@
     "#Write your code for constructing an example zoo here\n",
     "\n",
     "Detroit_zoo = Zoo(\"Detroit Zoo\")\n",
-    "Detroit_zoo.add(Alex)\n",
-    "Detroit_zoo.add(Marty)\n",
-    "Detroit_zoo.add(Skipper)\n",
+    "Detroit_zoo.add_animal(Alex)\n",
+    "Detroit_zoo.add_animal(Marty)\n",
+    "Detroit_zoo.add_animal(Skipper)\n",
     "\n",
     "Detroit_zoo.get_animals()"
    ]
@@ -1371,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 69,
    "id": "05391492",
    "metadata": {},
    "outputs": [],
@@ -1445,6 +1454,7 @@
     "\n",
     "    def get_required_habitat_areas(self):\n",
     "        \"\"\"Return the habitat area for each habitat\"\"\"\n",
+    "        pass\n",
     "        \n",
     "    def get_specific_habitat_area(self):\n",
     "        self.habitat_required_area['grassland'] = 0\n",
@@ -1462,28 +1472,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "d4680a31",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "grassland habitat has a required area of 60 Square Meters\n",
-      "aviary habitat has a required area of 0 Square Meters\n",
-      "aquatic habitat has a required area of 10 Square Meters\n"
-     ]
-    }
-   ],
-   "source": [
-    "Detroit_zoo.total_area()\n",
-    "Detroit_zoo.get_specific_habitat_area()\n",
-    "Detroit_zoo.get_habitat_sizes()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2b80858d",
    "metadata": {},
@@ -1495,34 +1483,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 72,
    "id": "9d3b477f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Write your code for testing the Zoo class here\n",
+    "\n",
+    "Next_zoo = Zoo(\"Next_zoo\")\n",
+    "\n",
+    "Bobby = Animal(\"Tiger\", \"grassland\")\n",
+    "Soar = Animal(\"Bird\", \"aviary\")\n",
+    "Swim = Animal(\"Fish\", \"aquatic\")\n",
+    "\n",
+    "Next_zoo.add_animal(Bobby)\n",
+    "Next_zoo.add_animal(Soar)\n",
+    "Next_zoo.add_animal(Swim)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "8ec040bf",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "grassland habitat has a required area of 90 Square Meters\n",
+      "grassland habitat has a required area of 30 Square Meters\n",
       "aviary habitat has a required area of 20 Square Meters\n",
-      "aquatic habitat has a required area of 20 Square Meters\n"
+      "aquatic habitat has a required area of 10 Square Meters\n"
      ]
     }
    ],
    "source": [
-    "#Write your code for testing the Zoo class here\n",
-    "\n",
-    "Bobby = Animal(\"Tiger\", \"grassland\")\n",
-    "Soar = Animal(\"Bird\", \"aviary\")\n",
-    "Swim = Animal(\"Fish\", \"aquatic\")\n",
-    "\n",
-    "Detroit_zoo.add_animal(Bobby)\n",
-    "Detroit_zoo.add_animal(Soar)\n",
-    "Detroit_zoo.add_animal(Swim)\n",
-    "\n",
-    "Detroit_zoo.total_area()\n",
-    "Detroit_zoo.get_specific_habitat_area()\n",
-    "Detroit_zoo.get_habitat_sizes()"
+    "Next_zoo.total_area()\n",
+    "Next_zoo.get_specific_habitat_area()\n",
+    "Next_zoo.get_habitat_sizes()"
    ]
   },
   {
@@ -1561,19 +1559,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 75,
    "id": "230b55cc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'zoo_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-b34abc00d8de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# to limit the output you can write zoo_df.sample(20).iterrows() to give you a sample of 20 animals\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0manimal_row\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzoo_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0manimal_row\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegs\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0manimal_row\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mairborne\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0manimal_row\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maquatic\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0} needs to go to the grassland habitat \"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0manimal_row\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'animal_name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'zoo_df' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mongoose needs to go to the grassland habitat \n",
+      "tuatara needs to go to the grassland habitat \n",
+      "wallaby needs to go to the grassland habitat \n",
+      "vole needs to go to the grassland habitat \n",
+      "ostrich needs to go to the grassland habitat \n",
+      "puma needs to go to the grassland habitat \n",
+      "bear needs to go to the grassland habitat \n"
      ]
     }
    ],
@@ -1581,7 +1581,7 @@
     "#Extend the following code for all habitat types\n",
     "\n",
     "# to limit the output you can write zoo_df.sample(20).iterrows() to give you a sample of 20 animals\n",
-    "for i, animal_row in zoo_df.iterrows():\n",
+    "for i, animal_row in zoo.sample(20).iterrows():\n",
     "    if (animal_row.legs > 0) and (animal_row.airborne == 0) and (animal_row.aquatic == 0):\n",
     "        print(\"{0} needs to go to the grassland habitat \".format(animal_row['animal_name']))"
    ]
@@ -1598,12 +1598,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "6f199979",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aardvark needs to go to the grassland habitat \n",
+      "antelope needs to go to the grassland habitat \n",
+      "bass needs to go to the aquatic habitat\n",
+      "bear needs to go to the grassland habitat \n",
+      "boar needs to go to the grassland habitat \n",
+      "buffalo needs to go to the grassland habitat \n",
+      "calf needs to go to the grassland habitat \n",
+      "carp needs to go to the aquatic habitat\n",
+      "catfish needs to go to the aquatic habitat\n",
+      "cavy needs to go to the grassland habitat \n",
+      "cheetah needs to go to the grassland habitat \n",
+      "chicken needs to go to the aviary habitat\n",
+      "chub needs to go to the aquatic habitat\n",
+      "crab needs to go to the aquatic habitat\n",
+      "crayfish needs to go to the aquatic habitat\n",
+      "crow needs to go to the aviary habitat\n",
+      "deer needs to go to the grassland habitat \n",
+      "dogfish needs to go to the aquatic habitat\n",
+      "dolphin needs to go to the aquatic habitat\n",
+      "dove needs to go to the aviary habitat\n",
+      "elephant needs to go to the grassland habitat \n",
+      "flamingo needs to go to the aviary habitat\n",
+      "flea needs to go to the grassland habitat \n",
+      "frog needs to go to the aquatic habitat\n",
+      "frog needs to go to the aquatic habitat\n",
+      "fruitbat needs to go to the aviary habitat\n",
+      "giraffe needs to go to the grassland habitat \n",
+      "girl needs to go to the grassland habitat \n",
+      "gnat needs to go to the aviary habitat\n",
+      "goat needs to go to the grassland habitat \n",
+      "gorilla needs to go to the grassland habitat \n",
+      "haddock needs to go to the aquatic habitat\n",
+      "hamster needs to go to the grassland habitat \n",
+      "hare needs to go to the grassland habitat \n",
+      "hawk needs to go to the aviary habitat\n",
+      "herring needs to go to the aquatic habitat\n",
+      "housefly needs to go to the aviary habitat\n",
+      "kiwi needs to go to the grassland habitat \n",
+      "ladybird needs to go to the aviary habitat\n",
+      "lark needs to go to the aviary habitat\n",
+      "leopard needs to go to the grassland habitat \n",
+      "lion needs to go to the grassland habitat \n",
+      "lobster needs to go to the aquatic habitat\n",
+      "lynx needs to go to the grassland habitat \n",
+      "mink needs to go to the aquatic habitat\n",
+      "mole needs to go to the grassland habitat \n",
+      "mongoose needs to go to the grassland habitat \n",
+      "moth needs to go to the aviary habitat\n",
+      "newt needs to go to the aquatic habitat\n",
+      "octopus needs to go to the aquatic habitat\n",
+      "opossum needs to go to the grassland habitat \n",
+      "oryx needs to go to the grassland habitat \n",
+      "ostrich needs to go to the grassland habitat \n",
+      "parakeet needs to go to the aviary habitat\n",
+      "penguin needs to go to the aquatic habitat\n",
+      "pheasant needs to go to the aviary habitat\n",
+      "pike needs to go to the aquatic habitat\n",
+      "piranha needs to go to the aquatic habitat\n",
+      "platypus needs to go to the aquatic habitat\n",
+      "polecat needs to go to the grassland habitat \n",
+      "pony needs to go to the grassland habitat \n",
+      "porpoise needs to go to the aquatic habitat\n",
+      "puma needs to go to the grassland habitat \n",
+      "pussycat needs to go to the grassland habitat \n",
+      "raccoon needs to go to the grassland habitat \n",
+      "reindeer needs to go to the grassland habitat \n",
+      "rhea needs to go to the grassland habitat \n",
+      "scorpion needs to go to the grassland habitat \n",
+      "seahorse needs to go to the aquatic habitat\n",
+      "seal needs to go to the aquatic habitat\n",
+      "sealion needs to go to the aquatic habitat\n",
+      "seasnake needs to go to the aquatic habitat\n",
+      "seawasp needs to go to the aquatic habitat\n",
+      "sole needs to go to the aquatic habitat\n",
+      "sparrow needs to go to the aviary habitat\n",
+      "squirrel needs to go to the grassland habitat \n",
+      "starfish needs to go to the aquatic habitat\n",
+      "stingray needs to go to the aquatic habitat\n",
+      "termite needs to go to the grassland habitat \n",
+      "toad needs to go to the aquatic habitat\n",
+      "tortoise needs to go to the grassland habitat \n",
+      "tuatara needs to go to the grassland habitat \n",
+      "tuna needs to go to the aquatic habitat\n",
+      "vampire needs to go to the aviary habitat\n",
+      "vole needs to go to the grassland habitat \n",
+      "vulture needs to go to the aviary habitat\n",
+      "wallaby needs to go to the grassland habitat \n",
+      "wolf needs to go to the grassland habitat \n",
+      "wren needs to go to the aviary habitat\n"
+     ]
+    }
+   ],
    "source": [
-    "#Write your code for constructing a complete zoo here"
+    "#Write your code for constructing a complete zoo here\n",
+    "\n",
+    "for i, animal_row in zoo.iterrows():\n",
+    "    \n",
+    "    if (animal_row.legs > 0) and (animal_row.airborne == 0) and (animal_row.aquatic == 0):\n",
+    "        print(\"{0} needs to go to the grassland habitat \".format(animal_row['animal_name']))\n",
+    "        \n",
+    "    elif (animal_row.airborne == 1) and (animal_row.venomous == 0) and (animal_row.aquatic == 0):\n",
+    "        print(\"{0} needs to go to the aviary habitat\".format(animal_row['animal_name']))\n",
+    "        \n",
+    "    elif (animal_row.airborne == 0) and (animal_row.aquatic == 1):\n",
+    "        print(\"{0} needs to go to the aquatic habitat\".format(animal_row['animal_name']))"
    ]
   },
   {
@@ -1618,12 +1725,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "47a8495f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Write your code for showing off your zoo object"
+    "#Write your code for showing off your zoo object\n",
+    "\n",
+    "new_zoo = Zoo(\"new_zoo\")\n",
+    "\n",
+    "for i, animal_row in zoo.iterrows():\n",
+    "    \n",
+    "    if (animal_row.legs > 0) and (animal_row.airborne == 0) and (animal_row.aquatic == 0):\n",
+    "        new_animal = Animal(animal_row['animal_name'], \"grassland\")\n",
+    "        new_zoo.add_animal(new_animal)\n",
+    "        \n",
+    "    elif (animal_row.airborne == 1) and (animal_row.venomous == 0) and (animal_row.aquatic == 0):\n",
+    "        new_animal = Animal(animal_row['animal_name'], \"aviary\")\n",
+    "        new_zoo.add_animal(new_animal)\n",
+    "        \n",
+    "    elif (animal_row.airborne == 0) and (animal_row.airborne == 0) and (animal_row.aquatic == 1):\n",
+    "        new_animal = Animal(animal_row['animal_name'], \"aquatic\")\n",
+    "        new_zoo.add_animal(new_animal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "b221cdef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "grassland habitat has a required area of 1230 Square Meters\n",
+      "aviary habitat has a required area of 340 Square Meters\n",
+      "aquatic habitat has a required area of 300 Square Meters\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_zoo.get_specific_habitat_area()\n",
+    "new_zoo.get_habitat_sizes()"
    ]
   },
   {
