Committing Part 4 with the deleted cell. Final Submission.

--- a/midterm/Exam 1/CMSE202-Midterm-Sect001_TF_Mods-STUDENT_vF.ipynb
+++ b/midterm/Exam 1/CMSE202-Midterm-Sect001_TF_Mods-STUDENT_vF.ipynb
@@ -96,14 +96,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-100-b839b17d76e9>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-100-b839b17d76e9>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    git add CMSE202-Midterm-Sect001_TF_Mods-STUDENT_vF\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "&#9989; **Do this**:\n",
-    "``` \n",
-    "(2 pt) Put the command you used to initiate git, add file, and commit actions here (Do Not Delete the ```)\n",
-    "```\n",
-    "\n",
     "git add CMSE202-Midterm-Sect001_TF_Mods-STUDENT_vF\n",
     "\n",
     "git commit -m \"Committing midterm\""
