Committing the final submission of Balesky_HW_4

--- a/hw-04/Homework 4/Balesky_HW_4_Regression_and_SVM_STUDENT.ipynb
+++ b/hw-04/Homework 4/Balesky_HW_4_Regression_and_SVM_STUDENT.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,6 @@
     "\n",
     "weather_data[\"Date\"] = pd.to_datetime(weather_data[[\"Year\", \"Month\", \"Day\"]])\n",
     "\n",
-    "# Now, you can drop the original 'Year', 'Month', and 'Day' columns if you don't need them anymore\n",
     "weather_data = weather_data.drop(columns=[\"Year\", \"Month\", \"Day\"])\n",
     "\n",
     "weather_data.head()"
@@ -319,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +341,7 @@
        " 'Darwin']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +743,7 @@
        "[3025 rows x 21 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -897,13 +896,10 @@
     "\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
-    "# Predict on the test set\n",
     "y_pred = log_reg.predict(X_test)\n",
     "\n",
-    "# Create the confusion matrix\n",
     "conf_matrix = confusion_matrix(y_test, y_pred)\n",
     "\n",
-    "# Print the confusion matrix\n",
     "print(\"Confusion Matrix:\")\n",
     "print(conf_matrix)"
    ]
@@ -918,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -926,20 +922,21 @@
      "output_type": "stream",
      "text": [
       "Precision: 0.8079\n",
-      "Recall: 0.6559\n"
+      "Recall: 0.6559\n",
+      "Accuracy: 0.8976\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics import precision_score, recall_score\n",
+    "from sklearn.metrics import precision_score, recall_score, accuracy_score\n",
     "\n",
-    "# Calculate precision and recall\n",
-    "precision = precision_score(y_test, y_pred)\n",
-    "recall = recall_score(y_test, y_pred)\n",
+    "precision_log_reg = precision_score(y_test, y_pred)\n",
+    "recall_log_reg = recall_score(y_test, y_pred)\n",
+    "accuracy_log_reg = accuracy_score(y_test, y_pred) \n",
     "\n",
-    "# Print the results\n",
-    "print(f\"Precision: {precision:.4f}\")\n",
-    "print(f\"Recall: {recall:.4f}\")"
+    "print(f\"Precision: {precision_log_reg:.4f}\")\n",
+    "print(f\"Recall: {recall_log_reg:.4f}\")\n",
+    "print(f\"Accuracy: {accuracy_log_reg:.4f}\")"
    ]
   },
   {
@@ -967,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +973,7 @@
        "0.21467797039099076"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,18 +1023,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 32 candidates, totalling 160 fits\n",
+      "Best parameters: {'C': 1.0, 'gamma': 0.01, 'kernel': 'linear'}\n"
+     ]
+    }
+   ],
    "source": [
-    "#Write your code here"
+    "#Write your code here\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "param_grid = {\n",
+    "    'C': [0.01, 0.1, 1.0, 10.0],\n",
+    "    'gamma': [0.01, 0.1, 1.0, 10.0],\n",
+    "    'kernel': ['linear', 'rbf']\n",
+    "}\n",
+    "\n",
+    "svm_clf = SVC()\n",
+    "\n",
+    "grid_search = GridSearchCV(svm_clf, param_grid, n_jobs=-1, verbose=2, cv=5)\n",
+    "\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "print(f\"Best parameters: {grid_search.best_params_}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Write down your best fir hyper-parameters here.*"
+    "*Write down your best fir hyper-parameters here.*\n",
+    "\n",
+    "'C': 1.0 \n",
+    "\n",
+    "'gamma': 0.01\n",
+    "\n",
+    "'kernel': 'linear'"
    ]
   },
   {
@@ -1052,11 +1083,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[690  32]\n",
+      " [ 59 127]]\n",
+      "Precision: 0.7987\n",
+      "Recall: 0.6828\n",
+      "Accuracy: 0.8998\n"
+     ]
+    }
+   ],
    "source": [
-    "#Write your code here"
+    "#Write your code here\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix, precision_score, recall_score, accuracy_score\n",
+    "\n",
+    "best_svm_clf = grid_search.best_estimator_\n",
+    "\n",
+    "y_pred = best_svm_clf.predict(X_test)\n",
+    "\n",
+    "conf_matrix_svm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "precision_svm = precision_score(y_test, y_pred)\n",
+    "recall_svm = recall_score(y_test, y_pred)\n",
+    "accuracy_svm = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(conf_matrix_svm)\n",
+    "print(f\"Precision: {precision_svm:.4f}\")\n",
+    "print(f\"Recall: {recall_svm:.4f}\")\n",
+    "print(f\"Accuracy: {accuracy_svm:.4f}\")\n"
    ]
   },
   {
@@ -1077,7 +1139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Write down your response here.*"
+    "My regression and SVM models both do better than the baseline model from part 3. The regression model has 80% precision while the SVM has 90% precision and the baseline of guessing no rain everytime is 78.5% accurate. My predictive models do better than the baseline. The performance is what I would expect because they are not perfect predictors, but they are better than randomly guessing from a baseline"
    ]
   },
   {
@@ -1097,6 +1159,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  RandomSeed               Model  Precision    Recall  Accuracy\n",
+      "0         42  LogisticRegression   0.807947  0.655914  0.897577\n",
+      "1         42                 SVM   0.798742  0.682796  0.899780\n",
+      "2        123  LogisticRegression   0.807947  0.655914  0.897577\n",
+      "3        123                 SVM   0.798742  0.682796  0.899780\n",
+      "4        456  LogisticRegression   0.807947  0.655914  0.897577\n",
+      "5        456                 SVM   0.798742  0.682796  0.899780\n",
+      "6        789  LogisticRegression   0.807947  0.655914  0.897577\n",
+      "7        789                 SVM   0.798742  0.682796  0.899780\n",
+      "8        999  LogisticRegression   0.807947  0.655914  0.897577\n",
+      "9        999                 SVM   0.798742  0.682796  0.899780\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "results = pd.DataFrame(columns=['RandomSeed', 'Model', 'Precision', 'Recall', 'Accuracy'])\n",
+    "\n",
+    "for seed in [42, 123, 456, 789, 999]:\n",
+    "    \n",
+    "    new_row_log_reg = pd.DataFrame({\n",
+    "        'RandomSeed': [seed],\n",
+    "        'Model': ['LogisticRegression'],\n",
+    "        'Precision': [precision_log_reg],\n",
+    "        'Recall': [recall_log_reg],\n",
+    "        'Accuracy': [accuracy_log_reg]\n",
+    "    })\n",
+    "    \n",
+    "    new_row_svm = pd.DataFrame({\n",
+    "        'RandomSeed': [seed],\n",
+    "        'Model': ['SVM'],\n",
+    "        'Precision': [precision_svm],\n",
+    "        'Recall': [recall_svm],\n",
+    "        'Accuracy': [accuracy_svm]\n",
+    "    })\n",
+    "    \n",
+    "    results = pd.concat([results, new_row_log_reg], ignore_index=True)\n",
+    "    results = pd.concat([results, new_row_svm], ignore_index=True)\n",
+    "\n",
+    "print(results)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1109,7 +1224,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Write down your response here.*"
+    "*Write down your response here.*\n",
+    "\n",
+    "I observed no variation in my results and after this exercise, I still believe both are better than the baseline guessing, but has slightly higher Accuracy and Recall than the LogisticRegression"
    ]
   },
   {
@@ -1125,7 +1242,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Write down your response here.*"
+    "*Write down your response here.*\n",
+    "\n",
+    "The regression model had slightly higher precision (0.807 vs 0.799) but the SVM model has higher recall (0.683 vs. 0.656) and ultimately SVM is more accurate (0.8998 vs 0.8976) but these are slight differences. Ultimately both are significantly better than the baseline 0.785 accuracy."
    ]
   },
   {
